@@ -140,6 +140,14 @@ bool wxEventLoopBase::YieldFor(long eventsToProcess)
 
     DoYieldFor(eventsToProcess);
 
+    // If any handlers called from inside DoYieldFor() threw exceptions, they
+    // may have been stored for later rethrow as it's unsafe to let them escape
+    // from inside DoYieldFor() itself, as it calls native functions through
+    // which the exceptions can't propagate. But now that we're back to our own
+    // code, we may rethrow them.
+    if ( wxTheApp )
+        wxTheApp->RethrowStoredException();
+
     return true;
 }
 
@@ -207,7 +215,15 @@ bool wxEventLoopManual::ProcessEvents()
         if ( m_shouldExit )
             return false;
     }
-    return Dispatch();
+
+    const bool res = Dispatch();
+
+    // Rethrow any exceptions which could have been produced by the handlers
+    // ran by Dispatch().
+    if ( wxTheApp )
+        wxTheApp->RethrowStoredException();
+
+    return res;
 }
 
 int wxEventLoopManual::DoRun()
